--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
 <h1>Congratulations!!</h1>
-<p>Created a CICD Pipeline Nidhi.</p>
+<p>Created a CICD Pipeline Successfully.</p>
     <p>Hello World!! Update the Pipeline Code</p>
   </div>
 </body>
